--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
     color: #6e6464;
 }
 h1 {
-    font-size: 90px;
+    font-size: 40px;
     font-family: 'Kumbh Sans', sans-serif;
     padding-left: 10%;
+    text-align: left;
     
 }
 .table-elements {
@@ -13,7 +14,13 @@ h1 {
     
 }
 header{
-    background-color: #b3b6ba;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    border: 10px solid #b3b6ba;
 }
 
 a{
@@ -21,6 +28,5 @@ a{
 }
 
 .bgcolor {
-    border: 33px solid #b3b6ba;
 }
 
