--- a/style.css
+++ b/style.css
@@ -1,33 +1,99 @@
-body {
-    color: #6e6464;
+* {
+	margin: 0;
+	padding: 0;
+	font-family: "Kumbh Sans", sans-serif;
 }
+
+p,
+.projects-items,
+.skills-item {
+	font-size: 48px;
+}
+
+a {
+	color: #6e6464;
+	text-decoration: none;
+}
+
 h1 {
-    font-size: 40px;
-    font-family: 'Kumbh Sans', sans-serif;
-    padding-left: 10%;
-    text-align: left;
-    
-}
-.table-elements {
-    margin-top: 1px;
-    padding-top: 1px;
-    
-}
-header{
-    background-color: #b3b6ba;
+	font-size: 120px;
+	text-align: left;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    border: 10px solid #b3b6ba;
+li {
+	max-width: fit-content;
 }
 
-a{
-    color: #6E6464;
+h2,
+h3 {
+	font-size: 56px;
+	text-align: center;
+	margin: 56px 0;
+	text-shadow: red 1px 1px 10px;
 }
 
-.bgcolor {
+.wrapper {
+	max-width: 1440px;
+	margin: 10px auto;
+	padding: 0 20px;
+	display: flex;
+	flex-direction: column;
 }
 
+.nav-bar {
+	display: flex;
+	list-style: none;
+	justify-content: space-between;
+	margin: 20px auto 40px auto;
+}
+
+.projects-item,
+.skills-item {
+	margin-left: 50px;
+}
+.nav-item,
+.projects-item {
+	position: relative;
+	font-size: 36px;
+	border: white 2px solid;
+	padding: 0px 10px;
+}
+
+.nav-item::after,
+.footer-item::after,
+.projects-item::after {
+	content: "";
+	position: absolute;
+	background-color: black;
+	height: 3px;
+	width: 0;
+	left: 0;
+	bottom: 0;
+	transition: 0.3s;
+}
+
+.nav-item:hover::after,
+.footer-item:hover::after,
+.projects-item:hover::after {
+	width: 100%;
+}
+
+.nav-item:hover {
+	color: rgba(0, 0, 0, 0.7);
+}
+
+.header-item {
+	display: flex;
+}
+
+.header-text {
+	margin-left: 13vw;
+}
+
+.footer-item {
+	position: relative;
+	font-size: 26px;
+	border: white 2px solid;
+	padding: 0px 10px;
+	margin-left: 40px;
+}
